# dh5io

./: .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: python-tests.yml
dh5io/: __init__.py  cont.py  create.py  dh5file.py  dh5io.py  dh5rawio.py  ensure_h5py_file.py  event_triggers.py  examplerawio.py  operations.py  spike.py  trialmap.py  validation.py  version.py
dh5io/dh5neo/: __init__.py  dh5io.py  dh5rawio.py
dhspec/: README.md  event_triggers.py  operations.py
dhzio/: errors.py
src/dh5cli/: README.md  dh5tree.py
src/dh5io/: __init__.py  cont.py  create.py  dh5file.py  dh5mne.py  dhfun.py  ensure_h5py_file.py  errors.py  markers.py  operations.py  spike.py  trialmap.py  validation.py  version.py
src/dh5io/dh5neo/: dh5rawio.py
src/dh5neo/: README.md  __init__.py  dh5io.py  dh5neo.py  dh5rawio.py
src/dhspec/: __init__.py  cont.py  dh5file.py  intervals.py  markers.py  spike.py  trialmap.py
src/dhzio/: README.md  cont.py  dhzfile.py
tests/: test_cont.py  test_create_dh5file.py  test_dh5file.py  test_dh5io.py  test_dhzio.py  test_event_trigger.py  test_existing_dh5file.py  test_markers.py  test_operations.py  test_trialmap.py  test_write_dh5file.py
