[tool.poetry]
name = "dh5io"
version = "0.1.0"
description = "Neo IO Reader for DAQ-HDF5 format used in Kreiter Lab"
authors = ["Joscha Schmiedt <schmiedt@uni-bremen.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo = "^0.12.0"
h5py = "^3.8.0"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96
