[project]
name = "dh5io"
version = "0.2.0-dev"
description = "Python tools for DAQ-HDF5 (dh5) file format used at Brain Research Institute of University of Bremen"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["neo", "h5py", "joblib"]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 96

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
