[project]
name = "dh-format"
version = "0.2.0-dev"
description = "Python tools for DAQ-HDF5 (dh5) file format used at Brain Research Institute of University of Bremen"
authors = []
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "h5py"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 96

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "dh-format[all]",
]
dhzio = ["zarr>=3.0.6"]
all = ["dh-format[test]", "dh-format[neo]", "dh-format[dhzio]"]
neo = ["neo"]
test = ["pytest", "pytest-cov"]
